--- a/style.css
+++ b/style.css
@@ -1,154 +1,66 @@
+/*style.css*/
 body {
-    background:#2b2b2b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: sans-serif;
+    line-height: 1.5;
+    min-height: 100vh;
+    background: #f3f3f3;
+    flex-direction: column;
+    margin: 0;
 }
-#main {
-    height:70vh;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    justify-content:center;
+
+.main {
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    padding: 10px 20px;
+    transition: transform 0.2s;
+    width: 500px;
+    text-align: center;
 }
 
 h1 {
-    color:white;
-    font-family:poppins;
-    font-size:50px;
+    color: #4CAF50;
 }
 
-input#input {
-    background:#7b7b7b;
-    border:none;
-    border-radius:6px 0 0 6px ;
-    padding:10px 20px;
-    color:white;
-    font-family:poppins;
-    font-size:20px;
-}
-
-#button {
-    text-transform:uppercase;
-    padding:10px 20px;
-    border:none;
-    font-size:20px;
-    font-family:poppins;
-    border-radius:0 6px 6px 0;
-    background:#78e794;
-    transition:all .3s ease-in-out;
-    cursor:pointer
-}
-
-#button:hover {
-    background:#5dcc79;
+label {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    text-align: left;
+    color: #555;
+    font-weight: bold;
 }
 
 
-
-.container {
-    margin-top:20px;
-    display:flex;
-    align-items:center;
+input {
+    display: block;
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 5px;
 }
 
-.container__text {
-    margin:0;
-    color:#bcbcbc;
-    font-family:poppins;
-    font-size:14px;
-    padding-left:10px;
-    cursor:pointer;
+button {
+    padding: 15px;
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: none;
+    color: white;
+    cursor: pointer;
+    background-color: #4CAF50;
+    width: 100%;
+    font-size: 16px;
 }
 
-#checkbox {
-    cursor:pointer;
-}
-
-body {
-    overflow:hidden
-}
-.popup {
-    position:absolute;
-    bottom:20px;
-    left:20px;
-    background:#78e794;
-    padding:20px 40px;
-    border-radius:5px;
-    font-size:17px;
-    font-family:poppins;
-    animation: showPopup 3s ease-in-out;
-    transform:translateY(100px);
-}
-
-@keyframes showPopup {
-    0%{
-        transform:translateY(100px)
-    }   
-    10%{
-        transform:translateY(0px)
-    }  
-
-    90%{
-        transform:translateY(0px)
-    }
-    100%{
-        transform:translateY(100px);
-
-    }
-}
-
-.footer {
-    text-align:center;
-    color:white;
-    font-family:poppins;
-    position:absolute;
-    bottom:0;
-    width:100%;
-    font-size:14px;
-
-}
-.link {
-    color:white;
-    transition:color .3s ease-in-out;
-}
-
-.link:hover{
-    color:#a7ddb5
-}
-
-@media (max-width:768px) {
-    h1 {
-        text-align:center;
-        line-height:1;
-    }
-    
-    input#input {
-        max-width:100%;
-        border-radius:6px 6px 0 0;
-        text-align:center
-    }
-    
-    .container {
-        flex-direction: column;
-    }
-    
-    button#button {
-        width:100%;
-        border-radius:0 0 6px 6px;
-    }
-
-    @keyframes showPopup {
-        0%{
-            transform:translateY(110px)
-        }   
-        10%{
-            transform:translateY(-20px)
-        }  
-    
-        90%{
-            transform:translateY(-20px)
-        }
-        100%{
-            transform:translateY(110px);
-    
-        }
-    }
+.wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
